fix nav bar behind video

--- a/less/referenceMaterialOverlay.less
+++ b/less/referenceMaterialOverlay.less
@@ -11,6 +11,7 @@
 
   &__nav-bar {
     height: 88px;
+    z-index: 83;
     top: 0px;
     position: sticky;
     background-color: white;
